# ContrastChecker

./: CMakeLists.txt  README.md  build.sh  main.cpp
include/: colorutils.hpp  mainwindow.hpp  mainwindow.ui
src/: mainwindow.cpp
